Pulsing for submit and fix for section header spacing.

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ The main styling portion targeting specific classes
 .section-heading h1::before, .section-heading h1::after {
     content: '';
     position: absolute;
-    bottom: -.5rem;
+    bottom: -1rem;
     left: 50%;
     transform: translateX(-50%);
     background-color: rgb(var(--secondary-color));
@@ -170,7 +170,7 @@ The main styling portion targeting specific classes
     width: 1.5rem;
     height: 1.5rem;
     border-radius: 100%;
-    bottom: -1.1rem;
+    bottom: -1.6rem;
 }
 
 .section-heading h6 {
@@ -439,7 +439,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    opacity: 75%;
+    animation: pulse 2s infinite;
 }
 
 .up {
